--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -8,7 +8,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
+
+  @media (max-width: $mobile-width-only) {
+    flex-direction: column;
+    position: relative;
+    border-bottom: 1px solid #e6e6e6;
+  }
 
   @media (min-width: $tablet-width) {
     padding-top: 25px;
