--- a/source/sass/global/mixins.scss
+++ b/source/sass/global/mixins.scss
@@ -6,7 +6,7 @@
   width: 320px;
 
   @media (min-width: $tablet-width) {
-    width: $tablet-width;
+    width: 708px;
     padding-left: 30px;
     padding-right: 30px;
   }
