--- a/source/sass/blocks/range.scss
+++ b/source/sass/blocks/range.scss
@@ -42,7 +42,7 @@
     height: 8px;
     border-radius: 50%;
     position: absolute;
-    top: 0;
+    top: -1px;
     left: 45%;
 
     &::before {
