--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -3,7 +3,7 @@
   display: grid;
 
   @media (min-width: $desktop-width) {
-    column-gap: 40px;
+    column-gap: 60px;
     margin-bottom: 40px;
   }
 }
@@ -17,8 +17,9 @@
   @media (min-width: $tablet-width) {
     font-size: 36px;
     line-height: 36px;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 46px;
+    padding-bottom: 70px;
+    padding-left: 38px;
   }
 
   @media (min-width: $desktop-width) {
