--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -20,6 +20,16 @@
     color: $white;
     background-color: $basic-green-2;
   }
+
+  &:focus {
+    text-decoration: none;
+    color: $black;
+    outline: 1px solid $special-grey;
+  }
+
+  &:active {
+    color: transparentize($color: $white, $amount: 0.7);
+  }
 }
 
 .button--secondary {
@@ -30,7 +40,13 @@
   font-size: 16px;
 
   &:hover {
+    text-decoration: none;
     background-color: #ebebeb;
     color: $special-dark-grey;
+  }
+
+  &:active {
+    color: transparentize($color: $special-dark-grey, $amount: 0.7);
+    background-color: #ebebeb;
   }
 }
