--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -29,28 +29,33 @@
   color: $special-dark-grey;
   text-transform: uppercase;
   padding: 10px 15px;
-  border: 1px solid #e7e7e7;
+  border: 2px solid #e7e7e7;
   margin-left: 10px;
   margin-bottom: 10px;
-
-  &::placeholder {
-    font-family: $title-font;
-    font-size: 16px;
-    background-color: $white;
-    color: $special-dark-grey;
-    text-transform: uppercase;
-  }
 
   &:hover {
     border: 2px solid $special-grey;
   }
 
   &:focus {
-    outline: 2px solid $special-dark-grey;
-    border: none;
+    border: 2px solid $black;
   }
 
-  //?? &:invalid {outline: 1px solid $error-color;}
+  &:required:invalid {
+    border: 2px solid $error-color;
+  }
+
+  &:valid {
+    border: 2px solid #e7e7e7;
+  }
+
+  &:placeholder-shown {
+    font-family: $title-font;
+    font-size: 16px;
+    background-color: $white;
+    color: $special-dark-grey;
+    text-transform: uppercase;
+  }
 }
 
 .form__variants {
@@ -68,6 +73,10 @@
 
 .form__input-radio {
   @include visually-hidden;
+
+  &:focus {
+    outline: 1px solid black;
+  }
 }
 
 .form__input-radio + .form__label::before {
@@ -117,29 +126,35 @@
     content: "";
     height: 2px;
     background-color: $basic-green;
-    width: calc(100vw - 150px);
+    width: calc((100vw - 280px) / 2);
     position: absolute;
     top: 35px;
-    margin-left: 30px;
-    //flex-grow: 1;
-    //flex-shrink: 0;
-    //position: relative;
-    //top: 11px;
+    margin-right: calc((280px - 100vw) / 2);
+    right: -40px;
+
+    @media (min-width: $tablet-width) {
+      content: "";
+      height: 2px;
+      background-color: $basic-green;
+      position: absolute;
+      top: 35px;
+      width: 100vw;
+      //margin-right: calc((780px - 100vw) / 2);
+      //right: -40px;
+    }
   }
 
   &::before {
-    content: "";
-    height: 2px;
-    background-color: $basic-green;
-    width: 15vw;
-    position: absolute;
-    top: 35px;
-    margin-left: -280px;
-    //???
-    //flex-grow: 1;
-    //flex-shrink: 0;
-    //position: relative;
-    //top: 11px;
+    @media (min-width: $tablet-width) {
+      content: "";
+      height: 2px;
+      background-color: $basic-green;
+      position: absolute;
+      top: 35px;
+      width: calc((100vw - 780px) / 2);
+      margin-left: calc((780px - 100vw) / 2);
+      left: -40px;
+    }
   }
 }
 
@@ -155,6 +170,14 @@
   background-image: url("../img/icon-email.svg");
   background-repeat: no-repeat;
   background-position: 98% 45%;
+
+  &:required:valid {
+    background-image: url("../img/icon-email-disabled.svg");
+  }
+
+  &:required:invalid {
+    background-image: url("../img/icon-email-invalid.svg");
+  }
 }
 
 .form__input-text--phone {
@@ -174,7 +197,7 @@
   padding: 10px 15px;
   border: 1px solid #e7e7e7;
 
-  &::placeholder {
+  &:placeholder-shown {
     font-family: $title-font;
     font-size: 16px;
     background-color: $white;
@@ -232,4 +255,22 @@
   position: absolute;
   top: 9px;
   left: -41px;
+}
+
+.form__input-radio:hover + .form__label::before,
+.form__input-checkbox:hover + .form__label::before {
+  border: 1px solid #bababa;
+}
+
+.form__input-radio:focus + .form__label::before,
+.form__input-checkbox:focus + .form__label::before {
+  border: 1px solid black;
+}
+
+.form__input-radio:active + .form__label::before,
+.form__input-checkbox:active + .form__label::before,
+.form__input-radio:active + .form__label,
+.form__input-checkbox:active + .form__label {
+  border-color: #bababa;
+  color: #bababa;
 }
