--- a/source/sass/blocks/variants.scss
+++ b/source/sass/blocks/variants.scss
@@ -116,18 +116,43 @@
   text-transform: uppercase;
   text-decoration: none;
   text-align: left;
+  background-image: url("../img/arrow-icon.svg");
+  background-repeat: no-repeat;
+  background-position: 23% 12px;
 
   &:hover {
     color: $black;
     text-decoration: none;
+    background-image: url("../img/arrow-icon-hover.svg");
+  }
+
+  &:focus {
+    outline: 1px solid $special-dark-grey;
+    color: $black;
+    text-decoration: none;
+  }
+
+  &:active {
+    opacity: 30%;
+    background-image: url("../img/arrow-icon-hover.svg");
   }
 }
 
-.variants__link::after {
-  content: url("../img/arrow-icon.svg");
+/*.variants__link::after {
+  content: "";
+  display: inline-block;
+  width: 24px;
+  height: 12px;
+  background-image: url("../img/arrow-icon.svg");
   margin-left: 10px;
 
   &:hover {
-    content: url("../img/arrow-icon-hover.svg");
+    background-image: url("../img/arrow-icon-hover.svg");
+    width: 32px;
+    margin-left: 5px;
   }
-}
+
+  &:active {
+    opacity: 30%;
+  }
+}*/
