feat: make svg-sprite from social icons and academy-icon

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,5 +1,6 @@
 .button {
   background-color: $basic-green;
+  font-family: $title-font;
   font-size: 14px;
   line-height: 18px;
   font-weight: 400;
