--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -274,3 +274,10 @@
   border-color: #bababa;
   color: #bababa;
 }
+
+/*.form .button {
+  font-family: $title-font;
+  border: none;
+  font-size: 20px;
+  padding: 14px 25px;
+}*/
