--- a/source/sass/blocks/how.scss
+++ b/source/sass/blocks/how.scss
@@ -9,6 +9,11 @@
   font-weight: 400;
   text-align: left;
   margin-bottom: 41px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 60px;
+    margin-top: 32px;
+  }
 }
 
 .how-it-work__list {
@@ -17,8 +22,7 @@
 
   @media (min-width: $tablet-width) {
     display: grid;
-    margin-left: 60px;
-    grid-template-columns: 230px 230px;
+    grid-template-columns: repeat(2, 230px);
     grid-template-rows: 280px 280px;
     column-gap: 153px;
     row-gap: 35px;
@@ -39,11 +43,18 @@
   min-height: 60px;
   padding-left: 80px;
   margin-bottom: 20px;
+  background-size: 60px 60px;
+  background-repeat: no-repeat;
+  background-position: 0 -2px;
 
   @media (min-width: $tablet-width) {
     position: relative;
-    padding-top: 80px;
+    padding-top: 111px;
     padding-left: 0;
+    font-size: 16px;
+    line-height: 24px;
+    position: relative;
+    background-size: 80px 80px;
   }
 
   &::after {
@@ -52,16 +63,15 @@
       font-family: $title-font;
       color: $basic-grey;
       position: absolute;
-      top: -80px;
-      right: 40px;
+      top: 93px;
+      right: 3px;
       z-index: -1;
     }
   }
 
   &--nutrients {
     background-image: url("../img/nutrients-icon.svg");
-    background-repeat: no-repeat;
-    background-position: 0 -2px;
+
   }
 
   &--nutrients::after {
@@ -72,8 +82,6 @@
 
   &--powder {
     background-image: url("../img/powder-icon.svg");
-    background-repeat: no-repeat;
-    background-position: 0 -2px;
   }
 
   &--powder::after {
@@ -84,8 +92,6 @@
 
   &--meal {
     background-image: url("../img/meal-icon.svg");
-    background-repeat: no-repeat;
-    background-position: 0 -2px;
   }
 
   &--meal::after {
@@ -96,8 +102,6 @@
 
   &--time {
     background-image: url("../img/time-icon.svg");
-    background-repeat: no-repeat;
-    background-position: 0 -2px;
   }
 
   &--time::after {
