--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -1,6 +1,7 @@
 .logo {
   display: block;
-  width: 190px;
+  width: 191px;
+  height: auto;
 
   @media (min-width: $tablet-width) {
     width: 174px;
