--- a/source/sass/blocks/variants.scss
+++ b/source/sass/blocks/variants.scss
@@ -82,6 +82,7 @@
 
   @media (min-width: $tablet-width) {
     text-align: left;
+    font-size: 36px;
   }
 
   @media (min-width: $desktop-width) {
@@ -101,6 +102,8 @@
   @media (min-width: $tablet-width) {
     border-bottom: none;
     width: 60%;
+    font-size: 16px;
+    line-height: 24px;
   }
 
   @media (min-width: $desktop-width) {
@@ -118,7 +121,16 @@
   text-align: left;
   background-image: url("../img/arrow-icon.svg");
   background-repeat: no-repeat;
-  background-position: 23% 12px;
+  background-position: 46% 12px;
+
+  @media (min-width: $tablet-width) {
+    background-position: 24% 15px;
+    font-size: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    background-position: 28% 15px;
+  }
 
   &:hover {
     color: $black;
