--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,52 +1,114 @@
 .example {
   margin-top: 20px;
-}
-
-.example__wrapper {
-  background-color: $basic-grey-2;
-
-  @media (min-width: $tablet-width) {
-    background-color: $white;
-  }
 
   @media (min-width: $desktop-width) {
     background-color: $basic-grey-2;
+    margin-top: 150px;
+    height: 395px;
+  }
+}
+
+.example__wrapper-around {
+  @media (min-width: $desktop-width) {
+    width: 1220px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-right: auto;
+    margin-left: auto;
+    display: grid;
+    grid-template-columns: 436px 690px;
+    column-gap: 134px;
   }
 }
 
 .example__history {
-  @include center-wrapper;
+  background-color: $basic-grey-2;
+
+  @media (min-width: $tablet-width) {
+    background-color: $white;
+    margin-bottom: 200px;
+  }
 
   @media (min-width: $desktop-width) {
-    //max-width: 50%;
+    background-color: $basic-grey-2;
+    grid-column: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
   }
 }
 
+.example__wrapper-left {
+  @include center-wrapper;
+
+  @media (min-width: $desktop-width) {
+    width: 100%;
+    margin-right: 0;
+    margin-left: 0;
+    position: relative;
+  }
+}
 
 .example__title {
   font-size: 36px;
   font-weight: 400;
   padding-top: 26px;
-  padding-bottom: 26px;
+  padding-bottom: 50px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    top: -150px;
+  }
 }
 
 .example__text {
   font-family: $text-font;
   line-height: 1.286;
+  margin-bottom: 0;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+    width: 98%;
+    padding-bottom: 32px;
+  }
+
+  @media (min-width: $desktop-width) {
+    text-align: left;
+    padding-top: 60px;
+  }
 }
 
 .example__statistic {
-  @include center-wrapper;
   padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  //justify-content: space-between;
+  flex-wrap: wrap;
 
-  @media (min-width: $desktop-width) {
-    max-width: 50%;
+  @media (min-width: $tablet-width) {
+    flex-direction: row;
+    justify-content: space-between;
   }
 }
 
 .example__list {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+
+  @media (min-width: $tablet-width) {
+    width: 52%;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 100%;
+    justify-content: flex-start;
+    gap: 30px;
+  }
 }
 
 .example__card {
@@ -59,21 +121,41 @@
   line-height: 24px;
   text-transform: uppercase;
   text-align: center;
-  padding: 13px 20px 5px;
   border: 1px solid $special-grey;
   border-radius: 3px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 30px;
+    line-height: 37px;
+  }
+
+  &--kg {
+    padding: 15px 42px 18px 42px;
+
+    @media (min-width: $tablet-width) {
+      padding: 16px 58px 18px 54px;
+    }
+  }
+
+  &--days {
+    padding: 15px 20px 18px 21px;
+
+    @media (min-width: $tablet-width) {
+      padding: 15px 31px 19px 30px;
+    }
+  }
 }
 
 .example__number-description {
   color: $special-dark-grey;
   font-family: $text-font;
   font-size: 12px;
-  line-height: 12px;
+  line-height: 1;
   text-align: center;
   position: absolute;
-  width: 60px;
-  top: 87%;
-  left: 18%;
+  //width: 60px;
+  top: 82%;
+  left: 22%;
   background-color: $basic-grey-2;
   padding-left: 5px;
   padding-right: 5px;
@@ -81,30 +163,101 @@
   @media (min-width: $tablet-width) and (max-width: $desktop-width) {
     background-color: $white;
   }
+
+  @media (min-width: $tablet-width) {
+    font-size: 14px;
+    padding-left: 0;
+    padding-right: 0;
+    top: 77%;
+    left: 11%;
+  }
+}
+
+.example__number-span {
+  display: block;
+
+  @media (min-width: $tablet-width) {
+    display: inline;
+  }
+}
+
+.example__number--kg + .example__number-description {
+  top: 82%;
+  left: 23%;
+
+  @media (min-width: $tablet-width) {
+    top: 79%;
+    left: 20%;
+  }
 }
 
 .example__cost {
-  padding-top: 20px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 40px;
   font-family: $title-font;
   color: $black;
   text-transform: uppercase;
   text-align: center;
   margin: 0;
+  flex-grow: 1;
+
+  @media (min-width: $tablet-width) {
+    text-align: right;
+    font-size: 20px;
+    flex-grow: 0;
+    padding-top: 10px;
+  }
+
+  @media (min-width: $desktop-width) {
+    text-align: left;
+  }
+}
+
+.example__cost-span {
+  display: inline;
+
+  @media (min-width: $tablet-width) {
+    display: block;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: inline-block;
+    margin-left: 10px;
+  }
 }
 
 .example__photoproove {
   background-color: $basic-grey-2;
+  grid-column: 2;
+
+  @media (min-width: $tablet-width) {
+    height: 462px;
+  }
 }
 
-.example__comparison {
+.example__wrapper-right {
   @include center-wrapper;
 
   @media (min-width: $tablet-width) {
-    display: grid;
-    grid-template-columns: auto auto;
-    height: 560px;
     position: relative;
+    top: -180px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 100%;
+    margin-right: 0;
+    margin-left: 0;
+    top: -163px;
+  }
+}
+
+.example__comparison {
+  @media (min-width: $tablet-width) {
+    //display: grid;
+    //grid-template-columns: 365px 325px;
+    display: flex;
+    height: 560px;
+    max-width: inherit;
   }
 
   @media (min-width: $desktop-width) {
@@ -114,11 +267,17 @@
 }
 
 .example__photo-before {
-  width: 280px;
-  height: auto;
+  width: 311px;
+  height: 232px;
 
   @media (min-width: $tablet-width) {
-    width: 100%;
+    width: 677px;
+    height: 520px;
+    max-width: inherit;
+    //display: block;
+    //grid-column: 1;
+    overflow: hidden;
+    clip: rect(auto, 365px, auto, auto);
     //clip: rect();
     //position: absolute;
   }
@@ -133,12 +292,13 @@
   }
 
   @media (min-width: $tablet-width) {
-    width: 100%;
+    width: 545px;
+    height: 520px;
+    max-width: inherit;
+    //grid-column: 2;
+    overflow: hidden;
+    clip: rect(auto, auto, auto, 365px);
     //clip: rect();
     //position: absolute;
   }
-}
-
-.example__range {
-  @include center-wrapper;
 }
