--- a/source/sass/global/mixins.scss
+++ b/source/sass/global/mixins.scss
@@ -13,8 +13,8 @@
 
   @media (min-width: $desktop-width) {
     width: 1220px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
