--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -192,7 +192,7 @@
   z-index: 2;
   display: block;
   padding: 10px 10px 5px 40px;
-  background-color: #fff;
+  background-color: $white;
   position: relative;
   top: 0;
   left: -40px;
