--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -154,7 +154,6 @@
   line-height: 1;
   text-align: center;
   position: absolute;
-  //width: 60px;
   top: 82%;
   left: 22%;
   background-color: $basic-grey-2;
@@ -254,11 +253,7 @@
 
 .example__comparison {
   @media (min-width: $tablet-width) {
-    //display: grid;
-    //grid-template-columns: 365px 325px;
-    display: flex;
     height: 560px;
-    max-width: inherit;
   }
 
   @media (min-width: $desktop-width) {
@@ -274,13 +269,8 @@
   @media (min-width: $tablet-width) {
     width: 677px;
     height: 520px;
-    max-width: inherit;
-    //display: block;
-    //grid-column: 1;
-    overflow: hidden;
     clip: rect(auto, 365px, auto, auto);
-    //clip: rect();
-    //position: absolute;
+    position: absolute;
   }
 }
 
@@ -294,12 +284,14 @@
 
   @media (min-width: $tablet-width) {
     width: 545px;
-    height: 520px;
-    max-width: inherit;
-    //grid-column: 2;
-    overflow: hidden;
-    clip: rect(auto, auto, auto, 365px);
-    //clip: rect();
-    //position: absolute;
+    height: auto;
+    clip: rect(auto, auto, auto, 260px);
+    position: absolute;
+    top: 0;
+    right: 89px;
+  }
+
+  @media (min-width: $desktop-width) {
+    right: 40px;
   }
 }
