--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -3,9 +3,10 @@
 
   @media (min-width: $desktop-width) {
     background-color: $basic-grey-2;
-    margin-top: 150px;
-    height: 395px;
-    padding-bottom: 40px;
+    background-image: linear-gradient(to bottom, $white 30%, $basic-grey-2 30% 100%);
+    //margin-top: 150px;
+    //min-height: 395px;
+    //padding-bottom: 40px;
   }
 }
 
@@ -27,11 +28,12 @@
 
   @media (min-width: $tablet-width) {
     background-color: $white;
-    margin-bottom: 200px;
+    //margin-bottom: 200px;
   }
 
   @media (min-width: $desktop-width) {
     background-color: $basic-grey-2;
+    background-image: linear-gradient(to bottom, $white 30%, $basic-grey-2 30% 100%);
     grid-column: 1;
     display: flex;
     flex-direction: column;
@@ -61,8 +63,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    position: absolute;
-    top: -150px;
+    //position: absolute;
+    //top: -150px;
   }
 }
 
@@ -113,7 +115,10 @@
 }
 
 .example__card {
-  position: relative;
+  //position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .example__number {
@@ -124,6 +129,7 @@
   text-align: center;
   border: 1px solid $special-grey;
   border-radius: 3px;
+  //position: relative;
 
   @media (min-width: $tablet-width) {
     font-size: 30px;
@@ -153,23 +159,24 @@
   font-size: 12px;
   line-height: 1;
   text-align: center;
-  position: absolute;
-  top: 82%;
-  left: 22%;
+  //position: absolute;
+  //left: 50%;
+  //bottom: -5px;
   background-color: $basic-grey-2;
   padding-left: 5px;
   padding-right: 5px;
+  margin-left: 0;
+  margin-top: -8px;
+  //transform: translateX(50%);
 
-  @media (min-width: $tablet-width) and (max-width: $desktop-width) {
+  @media (min-width: $tablet-width) and (max-width: $desktop-width - 1px) {
     background-color: $white;
   }
 
   @media (min-width: $tablet-width) {
     font-size: 14px;
-    padding-left: 0;
-    padding-right: 0;
-    top: 77%;
-    left: 11%;
+    //padding-left: 0;
+    //padding-right: 0;
   }
 }
 
@@ -178,16 +185,6 @@
 
   @media (min-width: $tablet-width) {
     display: inline;
-  }
-}
-
-.example__number--kg + .example__number-description {
-  top: 82%;
-  left: 23%;
-
-  @media (min-width: $tablet-width) {
-    top: 79%;
-    left: 20%;
   }
 }
 
@@ -231,7 +228,12 @@
   grid-column: 2;
 
   @media (min-width: $tablet-width) {
-    height: 462px;
+    min-height: 462px;
+    background-image: linear-gradient(to bottom, $white 30%, $basic-grey-2 30% 100%);
+  }
+
+  @media (min-width: $desktop-width) {
+    background-image: linear-gradient(to bottom, $white 30%, $basic-grey-2 30% 100%);
   }
 }
 
@@ -239,25 +241,25 @@
   @include center-wrapper;
 
   @media (min-width: $tablet-width) {
-    position: relative;
-    top: -180px;
+    //position: relative;
+    //top: -180px;
   }
 
   @media (min-width: $desktop-width) {
     width: 100%;
     margin-right: 0;
     margin-left: 0;
-    top: -163px;
+    //top: -163px;
   }
 }
 
 .example__comparison {
   @media (min-width: $tablet-width) {
-    height: 560px;
+    min-height: 560px;
   }
 
   @media (min-width: $desktop-width) {
-    height: 500px;
+    min-height: 500px;
     grid-column: 2;
   }
 }
@@ -268,7 +270,8 @@
 
   @media (min-width: $tablet-width) {
     width: 677px;
-    height: 520px;
+    height: auto;
+    //height: 520px;
     clip: rect(auto, 365px, auto, auto);
     position: absolute;
   }
@@ -287,7 +290,7 @@
     height: auto;
     clip: rect(auto, auto, auto, 260px);
     position: absolute;
-    top: 0;
+    //top: 0;
     right: 89px;
   }
 
