--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -196,7 +196,7 @@
     row-gap: 10px;
     background-color: $white;
     min-height: 110px;
-    border: 2px solid $basic-grey;
+    border: 1px solid $special-grey;
     padding: 10px 30px 25px 40px;
     margin-top: -2px;
   }
