--- a/source/sass/blocks/variants.scss
+++ b/source/sass/blocks/variants.scss
@@ -1,6 +1,6 @@
 .variants {
   @include center-wrapper;
-  margin-top: 200px;
+  margin-top: 70px;
 
   @media (min-width: $tablet-width) {
     margin-top: 20px;
@@ -73,7 +73,6 @@
 }
 
 .variants__title {
-  //font-family: $title-font;
   font-size: 24px;
   text-transform: uppercase;
   text-align: right;
@@ -119,52 +118,35 @@
   text-transform: uppercase;
   text-decoration: none;
   text-align: left;
-  background-image: url("../img/arrow-icon.svg");
-  background-repeat: no-repeat;
-  background-position: 46% 12px;
 
-  @media (min-width: $tablet-width) {
-    background-position: 24% 15px;
-    font-size: 20px;
-  }
-
-  @media (min-width: $desktop-width) {
-    background-position: 28% 15px;
+  &::after {
+    content: "";
+    display: inline-block;
+    width: 35px;
+    height: 15px;
+    background-image: url("../img/arrow-icon.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    margin-left: 20px;
   }
 
   &:hover {
     color: $black;
     text-decoration: none;
-    background-image: url("../img/arrow-icon-hover.svg");
+
+    &::after {
+      background-image: url("../img/arrow-icon-hover.svg");
+    }
   }
 
+  &:active,
   &:focus {
-    outline: 1px solid $special-dark-grey;
+    opacity: 30%;
     color: $black;
     text-decoration: none;
-  }
 
-  &:active {
-    opacity: 30%;
-    background-image: url("../img/arrow-icon-hover.svg");
+    &::after {
+      background-image: url("../img/arrow-icon-hover.svg");
+    }
   }
 }
-
-/*.variants__link::after {
-  content: "";
-  display: inline-block;
-  width: 24px;
-  height: 12px;
-  background-image: url("../img/arrow-icon.svg");
-  margin-left: 10px;
-
-  &:hover {
-    background-image: url("../img/arrow-icon-hover.svg");
-    width: 32px;
-    margin-left: 5px;
-  }
-
-  &:active {
-    opacity: 30%;
-  }
-}*/
