--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -6,6 +6,8 @@ $basic-green: #68b738;
 $basic-green-2: #5eaa2f;
 $basic-grey: #f2f2f2;
 $basic-grey-2:  #eaeaea;
+$basic-grey-form: #e7e7e7;
+$grey-hover: #bababa;
 $border-grey: #d9d9d9;
 $border-grey-catalog: #ebebeb;
 $special-grey: #cdcdcd;
